--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -21,41 +21,41 @@
 @*dropdown filter that redirects to page
     Leave ID blank!
 *@
-@helper LocationDropdownBrownfield(string id, string redirecbase, bool dropup = false)
+@helper LocationDropdownBrownfield(string GridId, string redirecbase, bool dropup = false)
     {
-        <div class="dropup" id="@id">
+        <div class="dropup" id="LocationDropdownBrownfield">
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
                 Set a location filter
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 <li><a href="@redirecbase?">ClearFilter</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=AAL">P3</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A FLOOR L">A FLOOR L</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A SIBO L">A SIBO L</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=AAS">P4</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A FLOOR S">A FLOOR S</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A SIBO ">A SIBO S</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=AAL">P3</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=A FLOOR L">A FLOOR L</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=A SIBO L">A SIBO L</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=AAS">P4</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=A FLOOR S">A FLOOR S</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=A SIBO ">A SIBO S</a></li>
             </ul>
         </div>
 }
 
-@helper LocationDropdownGreenField(string id, string redirecbase, bool dropup = false)
+@helper LocationDropdownGreenField(string GridId, string redirecbase, bool dropup = false)
     {
-        <div class="dropup" id="@id">
+        <div class="dropup" id="LocationDropdownGreenField">
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
                 Set a location filter
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 <li><a href="@redirecbase?">ClearFilter</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A LIJN 33">Floor (all)</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A LIJN 331">Frontstructure</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A LIJN 334">Frontfloor</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A LIJN 336">Rearfloor</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A LIJN 338">Marriage</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A LIJN 35 ">Sides</a></li>
-                <li><a href="@redirecbase?DataGrid-LocationTree-Contains=GA4.0 ">Preassembly</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=A LIJN 33">Floor (all)</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=A LIJN 331">Frontstructure</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=A LIJN 334">Frontfloor</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=A LIJN 336">Rearfloor</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=A LIJN 338">Marriage</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=A LIJN 35 ">Sides</a></li>
+                <li><a href="@redirecbase?@GridId-LocationTree-Contains=GA4.0 ">Preassembly</a></li>
             </ul>
         </div>
 }
