--- a/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
+++ b/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
@@ -1,51 +1,52 @@
 ﻿@model EqUiWebUi.Models.LogInfo
-<div class="panel panel-default">
+<div class="panel panel-primary">
     <div class="panel-heading">
-        <h5>Trend for @Model.logtext on @Model.location</h5>
+        <h4 class="panel-title">Trend for @Model.logtext on @Model.location</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
+  
+        <div class="panel-body" id="graphSpinner" style="position:relative">
+            <div id="gaphContainer">
+                <canvas id='graphCanvas'></canvas>
+            </div>
+        </div>
 
-    <div class="panel-body" id="graphSpinner" style="position:relative">
-        <div id="gaphContainer">
-            <canvas id='graphCanvas'></canvas>
+        <div class="panel-footer">
+            <div class="row">
+                <div class=" col-sm-2">
+                    Groupmode
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="btn-group" id="btnGrouping" role="group" aria-label="Graph grouping mode">
+                        <button type="button" class="btn  btn-sm btn-secondary active" id="btnGroupingAuto">auto</button>
+                        <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingHour">hour</button>
+                        <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingDay">day</button>
+                        <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingWeek">week</button>
+                        <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingMonth">month</button>
+                    </div>
+                </div>
+
+                <div class="col-sm-3"></div>
+
+                <div class="col-sm-4 col-sm-offset-2">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h5>Date range</h5>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" id="demo" class="form-control input-sm">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="panel-footer">
-        <div class="row">
-            <div class=" col-sm-2">
-                Groupmode
-            </div>
 
-            <div class="col-sm-4">
-                <div class="btn-group" id="btnGrouping" role="group" aria-label="Graph grouping mode">
-                    <button type="button" class="btn  btn-sm btn-secondary active" id="btnGroupingAuto">auto</button>
-                    <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingHour">hour</button>
-                    <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingDay">day</button>
-                    <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingWeek">week</button>
-                    <button type="button" class="btn  btn-sm btn-secondary" id="btnGroupingMonth">month</button>
-                </div>
-            </div>
-
-            <div class="col-sm-3"></div>
-
-            <div class="col-sm-4 col-sm-offset-2">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <h5>Date range</h5>
-                    </div>
-                    <div class="col-sm-8">
-                        <input type="text" id="demo" class="form-control input-sm">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<script src="~/Scripts/d3/d3.js"></script>
-<script src="~/Scripts/d3/Chart.bundle.js"></script>
-<script>
+    <script src="~/Scripts/d3/d3.js"></script>
+    <script src="~/Scripts/d3/Chart.bundle.js"></script>
+    <script>
     //global vars
     var groupmode = 0;
     var endDate = moment().subtract(29, 'days');
@@ -160,7 +161,7 @@
             ErrorTrendChart.destroy();
         }
         //clear the cancas just to be shure
-        $("#graphCanvas").remove(); 
+        $("#graphCanvas").remove();
         //add the new canvas
         $("#gaphContainer").append('<canvas id="graphCanvas" height="70"></canvas>');
         //build the chart
@@ -198,7 +199,7 @@
         refreshChart();
         });
 
-    
+
     //setting up groupmode events
     $("#btnGroupingAuto").click(function () {
         $("#btnGrouping").find(".active").removeClass("active");
@@ -238,5 +239,5 @@
     $(document).ready(function () {
         refreshChart();
     });
-</script>
+    </script>
 
