--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -8,8 +8,11 @@
 
     <p></p>
 
-    <div class="panel panel-default">
-        <h4>BROWNFIELD</h4>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h4 class="panel-title">Brownfield</h4>
+            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
         <div class="panel-body">
             <p>
                 <a href="~/Gadata/PloegRapportWebgrid" class="btn btn-primary btn-sm">PloegRapport &raquo;</a>
@@ -33,8 +36,11 @@
 
     <p></p>
 
-    <div class="panel panel-default">
-        <h4>GREENFIELD</h4>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h4 class="panel-title">Greenfield</h4>
+            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
         <div class="panel-body">
             <p>
                 <a href="~/NgacElectrode/index" class="btn btn-primary btn-sm">Electrode &raquo;</a>
@@ -55,7 +61,10 @@
     <p></p>
 
     <div class="panel panel-default">
-        <h4>Tableau</h4>
+        <div class="panel-heading">
+            <h4 class="panel-title">Tableau</h4>
+            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
         <div class="panel-body">
             <p>
                 <a href="~/Tableau/index" class="btn btn-primary btn-sm">Tableau &raquo;</a>
@@ -67,7 +76,10 @@
     <p></p>
 
     <div class="panel panel-default">
-        <h4>Qurt</h4>
+        <div class="panel-heading">
+            <h4 class="panel-title">Qurt</h4>
+            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
         <div class="panel-body">
             <p>
                 <a href="~/PDFjs/web/viewer.html?file=Q-Mapping Dashboard.pdf" class="btn btn-primary btn-sm">Qurt &raquo;</a>
@@ -79,7 +91,10 @@
     <p></p>
 
     <div class="panel panel-default">
-        <h4>Maximo</h4>
+        <div class="panel-heading">
+            <h4 class="panel-title">Maximo</h4>
+            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
         <div class="panel-body">
             <p>
                 <a href="~/Maximo/index" class="btn btn-primary btn-sm">Maximo &raquo;</a>
@@ -90,8 +105,11 @@
 
     <p></p>
 
-    <div class="panel panel-default">
-        <h4>Please don't touch</h4>
+    <div class="panel panel-danger">
+        <div class="panel-heading">
+            <h4 class="panel-title">Please don't touch</h4>
+            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
         <div class="panel-body">
             <p>
                 <a href="~/Dynamic/DynamicWebgrid" class="btn btn-primary btn-sm">Dynamic &raquo;</a>
@@ -113,3 +131,4 @@
 <footer>
     <p>&copy; @DateTime.Now.Year - VCG GA SDEBEUL ASP.NET Application</p>
 </footer>
+
