--- a/EqUiWebUi/Views/Gadata/StoWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/StoWebgrid.cshtml
@@ -42,7 +42,7 @@
     </div>
 
     <div class="panel-footer">
-        @MyFilters.LocationDropdownGreenField("/Gadata/StoWebgrid", "")
+        @MyFilters.LocationDropdownGreenField("Sto","/Gadata/StoWebgrid")
         <p style="float:right"> Last data push: '@Html.Raw(ViewBag.DataTimestamp)'</p>
     </div>
 </div>
@@ -50,7 +50,7 @@
 
 @*render popuover modal*@
 <div>
-    @MyModals.tableHelperModal("tableModal");
+    @MyModals.tableHelperModal("tableModal")
 </div>
 
 <script type="text/javascript">
