--- a/EqUiWebUi/Views/Maximo/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Views/Maximo/_workordersOnLocation.cshtml
@@ -1,19 +1,18 @@
 ﻿@model IEnumerable<EqUiWebUi.Models.Workorder>
 
 @Html.Grid(Model).Named("Workorders").Build(columns =>
-    {
-//columns.Add(model => DateTime.Now).Titled("Time");
-columns.Add(c => c.WONUM).Titled("WONUM");
-        columns.Add(c => c.WORKTYPE).Titled("WORKTYPE");
-        columns.Add(c => c.STATUS).Titled("STATUS").Filterable(true);
-        columns.Add(c => c.STATUSDATE).Titled("STATUSDATE").Formatted("{0:dd-MM-yyyy hh:mm}");
-        columns.Add(c => c.DESCRIPTION).Titled("DESCRIPTION").Sortable(false);
-        columns.Add(c => c.LOCATION).Titled("LOCATION").Filterable(true);
+{
+    columns.Add(c => c.WONUM).Titled("WONUM");
+    columns.Add(c => c.WORKTYPE).Titled("WORKTYPE").Css("hidden-md hidden-sm hidden-xs");
+    columns.Add(c => c.STATUS).Titled("STATUS").Css("hidden-md hidden-sm hidden-xs").Filterable(true);
+    columns.Add(c => c.STATUSDATE).Titled("STATUSDATE").Formatted("{0:dd-MM-yyyy hh:mm}").Css("hidden-md hidden-sm hidden-xs");
+    columns.Add(c => c.DESCRIPTION).Titled("DESCRIPTION").Sortable(false);
+    columns.Add(c => c.LOCATION).Titled("LOCATION").Css("hidden-sm hidden-xs").Filterable(true);
 
-    }).Sortable().Pageable(pager =>
-    {
-        pager.RowsPerPage = 7;
-    }).Empty("No workorders found")
+}).Sortable().Pageable(pager =>
+{
+    pager.RowsPerPage = 7;
+}).Empty("No workorders found").Css("table-hover")
 
 @*subscrible this table to events*@
 <script>
