--- a/EqUiWebUi/Views/Gadata/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/SupervisieWebgrid.cshtml
@@ -10,40 +10,12 @@
     <p></p>
     <div>
         <div>
-            @Html.Grid(Model).Named("Supervisie").Build(columns =>
-       {
-           columns.Add(c => c.Location).Titled("Location").Filterable(true);
-           columns.Add(c => c.logtext).Titled("Logtext").Css("hidden-sm hidden-xs");
-           columns.Add(c => c.DT).Titled("DT");
-           columns.Add(c => c.time).Titled("time");
-           columns.Add(c => c.Classification).Titled("Class");
-           columns.Add(c => c.Subgroup).Titled("Subgroup");
-           columns.Add(c => c.Logtype).Titled("LogType").Filterable(true);
-           columns.Add(c => c.LocationTree)
-           .Titled("Info")
-           .Encoded(false)
-           .Filterable(true)
-           .RenderedAs(o => Html.ActionLink("INFO", "_Moreinfo",
-              new
-              {
-                  location = o.Location,
-                  errornum = o.Logcode,
-                  refid = o.refId,
-                  logtype = o.Logtype,
-                  logtext = o.logtext
-              },
-                new { @class = "modal-link" }
-                )
-           );
-       }).Sortable().Pageable(pager =>
-       {
-           pager.RowsPerPage = 20;
-       }).Empty("No data found").Css("table-hover")
+            @Html.AjaxGrid(Url.Action("_supervisie"))
         </div>
 
         <div class="panel-footer">
             @MyFilters.LocationDropdownBrownfield("Supervisie","/Gadata/SupervisieWebgrid")
-            <p class="pull-right"> Last data push: '@Html.Raw(ViewBag.DataTimestamp)'</p>
+            <p class="pull-right"> Last data push: ????</p>
         </div>
     </div>
 </div>
@@ -56,20 +28,18 @@
 
 
 <script type="text/javascript">
-    //need to just eleminiate this... can use the attributes of the modal
-    var bModalOpen = false;
-    //
-
     $(document).ready(function () {
-        //set colors for grid
-        tableFormatLogtype(7);
-        //enable blinking
-        tableFormatBlink(7, 6);
         //subscribe to modal click
         ListenToModal('#tableModal');
         //enable polling for new data
-        PolFordata(5, '@Html.Raw(ViewBag.DataTimestamp)', '@Url.Action("SupervisiecheckNewData")');
+        CheckRefreshTable(5, '@Url.Action("SupervisiecheckNewData")', '@Url.Action("_supervisie")', '#Supervisie');
         //hide the navbar and move body content up
         Navbar(false);
+        //subscribe to row clicked events
+        $('#Supervisie').mvcgrid({
+            rowClicked: function (row, data, e) {
+                console.log("row click:") & console.log(data);
+            }
+        });
     });
 </script>
