--- a/EqUiWebUi/Views/NgacElectrode/CurrentTipstatus.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/CurrentTipstatus.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Models.TipMonitor>
+﻿
 
 @*set title*@
 @{
@@ -11,33 +11,12 @@
     <div class="panel panel-default">
 
         <div class="panel-body">
-            @Html.Grid(Model).Named("NgacTipStatus").Build(columns =>
-       {
-       columns.Add(c => c.Robot).Titled("Robot").Filterable(true);
-       columns.Add(c => c.Date_Time).Titled("Laaste keer gefreest").Formatted("{0:dd-MM-yyyy HH:mm}");
-       columns.Add(c => c.nDress).Titled("Aantal keer gefreest");
-       columns.Add(c => c.WearRatio).Titled("%WearRatio");
-       columns.Add(c => c.pWear).Titled("%wear").Filterable(true).Css("bolded");
-       columns.Add(c => c.nRspots).Titled("Resterende Spots");
-       columns.Add(c => c.nRcars).Titled("Resterende Stukken");
-       columns.Add(c => c.TipAge_h_).Titled("Electrode leeftijd (h)");
-       columns.Add(c => c.Time_DressCycleTime).Titled("Dress ct (s)");
-       columns.Add(c => c.LocationTree).Filterable(true).Css("hidden"); //used for filtering
-       //launch sbcu tool
-       columns.Add()
-                             .Encoded(false)
-                             .Filterable(false)
-                             .Sortable(false)
-                             .RenderedAs(c => MyEquiToolkit.SbcuTool(c.Robot, "1")); //need to add the toolnumber in die model
-            }).Sortable().Pageable(pager =>
-       {
-                pager.RowsPerPage = @ViewBag.RowsPerPage;
-            }).Empty("No data found").Css("table-hover")
+            @Html.AjaxGrid(Url.Action("_TipStatus"))
         </div>
 
         <div class="panel-footer">
             @MyFilters.LocationDropdownGreenField("NgacTipStatus", "/NgacElectrode/CurrentTipstatus")
-            <p style="float:right"> Last data push: '@Html.Raw(ViewBag.DataTimestamp)'</p>
+            <p style="float:right"> Last data push: ????</p>
         </div>
     </div>
 </div>
@@ -96,6 +75,6 @@
 <script type="text/javascript">
     $(document).ready(function () {
         //enable polling for new data
-        PolFordata(5, '@Html.Raw(ViewBag.DataTimestamp)', '@Url.Action("TipwearCheckNewData")');
+        CheckRefreshTable(5, '@Url.Action("TipwearCheckNewData")', '@Url.Action("_TipStatus")', '#NgacTipStatus');
     });
 </script>
